# OpenMarble

./: .gitignore  README.md
Apple-Sharp-Image-to-3D-View-Synthesis/: .gitattributes  .gitignore  README.md  app.py  model_utils.py  pyproject.toml  requirements.txt
Apple-Sharp-Image-to-3D-View-Synthesis/assets/examples/: Booster_train_balanced_Bathroom_camera_00_im0_png_00000_0000-0001.ply  ETH3D_courtyard_00000_0000-0001.ply  manifest.json
Apple-Sharp-Image-to-3D-View-Synthesis/outputs/: 352803103246-1772274199139-15441ec3.ply  5c612d330320-1772268754018-990b1d6b.ply  Gemini_Generated_Image_2vu11f2vu11f2vu1-1772267753327-ad6da4e4.ply  hkustentrance-1772264843991-cccc9a16.ply
backend/: flashworld_template.json  main.py  requirements.txt
frontend/: .env.example  next.config.mjs  package-lock.json  package.json
frontend/app/(landing)/(home)/: render-items.tsx
frontend/app/(landing)/app-store/: layout.tsx  page.tsx
frontend/app/(landing)/diorama/: layout.tsx  page.tsx
frontend/app/(landing)/openmarble/: layout.tsx  page.tsx
frontend/components/core/: navigation-bar.tsx  ornament-windowed.tsx  window.tsx
frontend/components/examples/: flash-list.tsx
frontend/components/icons/: diorama.tsx  index.ts  openmarble.tsx
frontend/components/landing/: hero-dropdown-menu.tsx
frontend/components/marble/: asset-panel.tsx  image-upload.tsx  processing-overlay.tsx  scene-viewer.tsx  street-view-input.tsx
frontend/content/docs/: meta.json
frontend/lib/: api.ts  layout.shared.ts  marble-atoms.ts
frontend/public/: supersplat
(+11 files in other folders)
